--- a/spe_events/templates/spe_events/plugins/location.html
+++ b/spe_events/templates/spe_events/plugins/location.html
@@ -20,23 +20,11 @@
     <script type="text/javascript" charset="utf-8">
         $( document ).ready(function() {
 
-            $('span.date').each(function() {
+            $('.date').each(function() {
                 var dateFormat = $(this).text();
                 var d = new Date(dateFormat);
                 var curr_date = d.getDate();
-                var month = new Array();
-                    month[0] = "January";
-                    month[1] = "February";
-                    month[2] = "March";
-                    month[3] = "April";
-                    month[4] = "May";
-                    month[5] = "June";
-                    month[6] = "July";
-                    month[7] = "August";
-                    month[8] = "September";
-                    month[9] = "October";
-                    month[10] = "November";
-                    month[11] = "December";
+                var month = ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"];
                 var curr_month = month[d.getMonth()];
                 var curr_year = d.getFullYear();
                 $(this).text(curr_month+" "+curr_date+", "+curr_year);
