--- a/mainsite/static/jpt/css/_vars.scss
+++ b/mainsite/static/jpt/css/_vars.scss
@@ -11,6 +11,7 @@ $col-drkgrey:           #424143;
 $col-basegrey:          grey;
 $col-boxshadow:         #b4b4b9;
 $col-notsolightgrey:    #e4e1d8;
+$col-sprlghtgry:        #e7e7e7;
 $col-lightgrey:         #f2efea;
 $col-lightgrey2:        #f4f4f4;
 $col-blue:              #181c41;
